fix(components/listcomposition): rigth toolbar vertical alignment (#2685)

--- a/packages/components/src/List/ListComposition/Toolbar/ListToolbar.scss
+++ b/packages/components/src/List/ListComposition/Toolbar/ListToolbar.scss
@@ -26,7 +26,11 @@ $tc-toolbar-height: 7rem;
 	&-right {
 		align-items: center;
 		display: flex;
-		margin-left: auto;
+		margin: {
+			left: auto;
+			top: 0;
+			bottom: 0;
+		}
 	}
 
 	&-separated {
